--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <div class="wrapper"></div>
     <header>
         <div class="white-logo">
-            <a href="#"><img src="/Sito-Images/Frame 1707478354(whitelogo).svg" alt="Sitio Logo"></a>
+            <a href="/Sitio-website/index.html"><img src="/Sito-Images/Frame 1707478354(whitelogo).svg" alt="Sitio Logo"></a>
         </div>
         
         <div class="white-logoweb">
