--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!-- <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -570,4 +570,4 @@
         </div>
     </section>
 </body>
-</html>
+</html> -->
