--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="white-logo">
-            <a href="#"><img src="/Sito-Images/Frame 1707478354(whitelogo).svg" alt="Sitio Logo"></a>
+            <a href="#"><img src="https://runogray.github.io/Sitio-website/Sito-Images/Frame 1707478354(whitelogo).svg" alt="Sitio Logo"></a>
         </div>
         
         <div class="white-logoweb">
