--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         
         <div class="white-logoweb">
-            <a href="#"><img src="/images/sitio logo.svg" alt="Sitio">
+            <a href="#"><img src="https://runogray.github.io/Sitio-website/images/sitio logo.svg" alt="Sitio">
         </div>
         <nav>                  
             <ul>
