--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Welcome to Sitio! Need a website, standout flyers, or a strong brand identity? Our creative team brings your vision to life, and with our freelance and project management services, we make reaching your business goals easier than ever.
         </p>
         <div class="heroimageweb">
-            <img src="/images/hero image.png" alt="" width="650" height="420">
+            <img src="./images/hero image.png" alt="" width="650" height="420">
         </div>
     </section>
     <section class="Popular">
