--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="try">
                 <div class="trytry">
                     <div class="left">
-                        <img src="/images/coin-stack.png" alt="">
+                        <img src="./images/coin-stack.png" alt="">
                     </div>
                     <div class="right"> <p>Business Growth</p></div>
                 </div>
@@ -91,7 +91,7 @@
             <div class="try">
                 <div class="trytry">
                     <div class="left">
-                        <img src="/images/Campaign.png" alt="">
+                        <img src="./images/Campaign.png" alt="">
                     </div>
                     <div class="right"> <p>Graphics</p></div>
                 </div>
@@ -99,7 +99,7 @@
             <div class="try">
                 <div class="trytry">
                     <div class="left">
-                        <img src="/images/Insights.png" alt="">
+                        <img src="./images/Insights.png" alt="">
                     </div>
                     <div class="right"> <p>Product design</p></div>
                 </div>
@@ -107,7 +107,7 @@
             <div class="try">
                 <div class="trytry">
                     <div class="left">
-                        <img src="/images/DeveloperBoard.png" alt="">
+                        <img src="./images/DeveloperBoard.png" alt="">
                     </div>
                     <div class="right"> <p>Development</p></div>
                 </div>
@@ -115,7 +115,7 @@
             <div class="try">
                 <div class="trytry">
                     <div class="left">
-                        <img src="/images/RecordVoiceOver.png" alt="">
+                        <img src="./images/RecordVoiceOver.png" alt="">
                     </div>
                     <div class="right"> <p>Customer Service</p></div>
                 </div>
@@ -132,7 +132,7 @@
         <div class="more-content">
             <div class="left-content">
                 <p class="h1">Manage business structure, increase productivity and business growth for your startups and existing business.</p>
-                <img src="/images/grouped image.png" alt="" width="440" height="260">
+                <img src="./images/grouped image.png" alt="" width="440" height="260">
             </div>
             <div class="right-content">
                 <div class="card1">
