--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <div class="white-logo">
-            <a href="#"><img src="https://runogray.github.io/Sitio-website/Sito-Images/Frame 1707478354(whitelogo).svg" alt="Sitio Logo"></a>
+            <a href="#"><img src="./images/sitio logo.svg" alt="Sitio Logo"></a>
         </div>
         
         <div class="white-logoweb">
-            <a href="#"><img src="/images/sitio logo.svg" alt="Sitio">
+            <a href="#"><img src="./images/sitio logo.svg" alt="Sitio">
         </div>
         <nav>                  
             <ul>
@@ -50,7 +50,7 @@
             Welcome to Sitio! Need a website, standout flyers, or a strong brand identity? Our creative team brings your vision to life, and with our freelance and project management services, we make reaching your business goals easier than ever.
         </p>
         <div class="heroimageweb">
-            <img src="./images/hero image.png" alt="" width="650" height="420">
+            <img src="./images/Heroimg.png" alt="" width="758">
         </div>
     </section>
     <section class="Popular">
